Apply suggestions from content review
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -93,7 +93,7 @@ row followed by rows of data below.
 
 ### Columns
 
-Column widths can vary by content and only requires a minimum spacing between
+Column widths can vary by content and only require a minimum spacing between
 columns. Tables require three or more columns.
 
 | Spacing between | Property | px / rem | Spacing token |
@@ -178,7 +178,7 @@ small toolbar is paired with the short and compact row sizes.
 ### Batch action bar
 
 The default 48px batch action bar is paired with the tall and default row sizes.
-The small batch actioin bar is paired with the short and compact row sizes.
+The small batch action bar is paired with the short and compact row sizes.
 
 | Class                       | Property                    | px/rem | Spacing token |
 | --------------------------- | --------------------------- | ------ | ------------- |
