--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -569,7 +569,7 @@ should be closed by default, and placed below the table title.
 
 #### Open search
 
-The search field can also appear always open on a data table. The field is
+The search field can appear always open on a data table. The field is
 placed on the left side of the table under the table title and stretches until
 it mets the actions on the right.
 
@@ -635,7 +635,7 @@ the items.
 
 ### Radio selection
 
-Instead of a multi-select checkbox function the data table also supports a
+Instead of a multiselect checkbox function, the data table supports a
 single selection radio button control. Only one row can be selected at a time
 when using the radio selection. The radio button is placed in the first column
 on the left side.
@@ -655,7 +655,7 @@ row is accompanied by
 an [overflow menu](https://www.carbondesignsystem.com/components/overflow-menu/code) that
 contains actions related specifically to that row.
 
-When the overflow menu contains less than three options, keep the actions inline
+When the overflow menu contains fewer than three options, keep the actions inline
 as icon buttons instead. This reduces a click and makes available actions
 visible at a glance.
 
