--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -571,7 +571,7 @@ should be closed by default, and placed below the table title.
 
 The search field can appear always open on a data table. The field is
 placed on the left side of the table under the table title and stretches until
-it mets the actions on the right.
+it meets the actions on the right.
 
 <Row>
 <Column colLg={8}>
