--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -169,7 +169,7 @@ respectively.
 
 #### When to use
 
-- Use a narrow tearsheet as an alternative to Modal when there is scrolling.
+- Use a narrow tearsheet as an alternative to a modal when there is scrolling.
 - Use when the form fields can be broken down into sections using section headers.
 
 #### When not to use
