--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -36,7 +36,7 @@ Wide tearsheet, and Full page.
 
 ## Overview
 
-Users often need to create different types of assets - they can have simple or
+Users often need to create different types of assets, and they can have simple or
 complex requirements.
 
 To create is to generate a new resource. Creating is distinct from adding, but
