--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -380,7 +380,7 @@ consequences, show a modal alerting them that the changes won't be saved.
 6. **Toggle (optional)**: Optional toggle allows the user to view all available
    options in one scrolling page with anchor links.
 7. **Buttons**: The primary, secondary, and ghost buttons are 64px tall fluid
-   buttons. They are "Next", "Back" and "Cancel", respectively. The "Back"
+   buttons. They are "Next", "Back", and "Cancel", respectively. The "Back"
    button will be disabled on the first step. The "Next" button will change to
    "Create" on the last step of creation. "Cancel" takes the user to the
    previous page and cancels the create action.
