docs: style edits to usage guidance

--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -22,7 +22,7 @@ times.
 <AnchorLink>Universal behaviors</AnchorLink>
 <AnchorLink>Simple date input</AnchorLink>
 <AnchorLink>Calendar pickers</AnchorLink>
-<AnchorLink>Time picker</AnchorLink>
+<AnchorLink>Time pickers</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
@@ -502,7 +502,7 @@ in the past when scheduling, then set a min date to today.
 
 <Caption>The dates before today are out of range and disabled. </Caption>
 
-## Time picker
+## Time pickers
 
 Time pickers provide the user with a text field in which they can input the hour
 and minutes. Additionally, they can be accompanied by an AM/PM and a time zone
