--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -27,7 +27,7 @@ one selection from the group is allowed.
 
 Radio buttons represent a group of mutually exclusive choices, compared to
 checkboxes that allow users to make one or more selections from a group. In use
-cases where only one selection of a group is allowed, use the radio button
+cases where only one selection from a group is allowed, use the radio button
 component instead of the checkbox.
 
 ## Live demo
