--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -27,7 +27,7 @@ commonly used for “on/off” switches.
 
 Toggle is a control that is used to quickly switch between two possible states.
 Toggles are only used for these binary actions that occur immediately after the
-user “flips” the toggle switch. They are commonly used for “on/off” switches.
+user “flips the switch”. They are commonly used for “on/off” switches.
 
 <Row>
 <Column colLg={8}>
