--- a/src/pages/patterns/global-header/index.mdx
+++ b/src/pages/patterns/global-header/index.mdx
@@ -43,7 +43,7 @@ in products.
 
 ![Example diagram of the global header.](images/header-anatomy.png)
 
-1. **Hamburger:** The hamburger icon is used to open product navigation such as
+1. **Main menu:** The main menu icon is used to open product navigation such as
    the [left panel](/components/UI-shell-left-panel/usage/).
 1. **Header name:** For IBM products, the header name is always preceded by
    “IBM”. This should always and only link the user to the domain’s home page.
