summary and image updates

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -27,8 +27,18 @@ of the new self-service purchase experience on IBM.com.
 
 ## Summary
 
-This section provides a succinct and effective summary that is quick to read,
-and covers the key highlights and takeaways.
+The IBM.com Commerce Platform team spent 3 three months transitioning their
+checkout flow to use Carbon to improve their conversion rate and overall product
+experience. They took an iterative approach, starting first with small, isolated
+features to get comfortable designing and developing with Carbon. Next they
+replaced existing elements with Carbon components. Once all the components had
+been transitioned, the team focused on updating page structure and layout.
+
+Since the Carbon refresh, the team’s delivery cycle has sped up and they spend
+less time on QA. Their product is now aligned with the other IBM.com experiences
+that use Carbon, creating a consistency of experience. Their conversion rate
+increased by 5% and more than 50% of customers are converting to purchase, which
+puts them on par with industry benchmarks.
 
 ## The Challenge
 
