--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -1,5 +1,5 @@
 ---
-title: IBM commerce platform
+title: IBM Commerce Platform
 description:
   This case study examines the adoption of Carbon for the design and development
   of the new self-service purchase experience on IBM.com.
