--- a/src/pages/developing/angular-tutorial/step-1.mdx
+++ b/src/pages/developing/angular-tutorial/step-1.mdx
@@ -805,14 +805,14 @@ to import each individual icon we will use.
 
 <!-- prettier-ignore-start -->
 ```javascript path=src/app/app.module.ts,src/app/app.component.spec.ts,src/app/header/header.component.spec.ts
-import { Notification20Module } from '@carbon/icons-angular/lib/notification/20';
-import { UserAvatar20Module } from '@carbon/icons-angular/lib/user--avatar/20';
-import { AppSwitcher20Module } from '@carbon/icons-angular/lib/app-switcher/20';
+import { NotificationModule } from '@carbon/icons-angular';
+import { UserAvatarModule } from '@carbon/icons-angular';
+import { AppSwitcherModule } from '@carbon/icons-angular';
 ```
 <!-- prettier-ignore-end -->
 
 ```javascript path=src/app/app.module.ts,src/app/app.component.spec.ts,src/app/header/header.component.spec.ts
-imports: [Notification20Module, UserAvatar20Module, AppSwitcher20Module];
+imports: [NotificationModule, UserAvatarModule, AppSwitcherModule];
 ```
 
 Then we need to add the template code. Populate `header.component.html` with:
@@ -825,13 +825,13 @@ Then we need to add the template code. Populate `header.component.html` with:
 	</ibm-header-navigation>
 	<ibm-header-global>
 		<ibm-header-action title="action">
-			<svg icon ibmIconNotification20></svg>
+			<svg ibmIconNotification size="20"></svg>
 		</ibm-header-action>
 		<ibm-header-action title="action">
-			<svg icon ibmIconUserAvatar20></svg>
+			<svg ibmIconUserAvatar size="20"></svg>
 		</ibm-header-action>
 		<ibm-header-action title="action">
-			<svg icon ibmIconAppSwitcher20></svg>
+			<svg ibmIconAppSwitcher size="20"></svg>
 		</ibm-header-action>
 	</ibm-header-global>
 </ibm-header>
