fix & docs (tutorials): fix aat header violation and content updates (#2031)
* fix(parnters-tutorials): fix aat header violation and content updates

* docs(partners): update title back to the people

* update link from badge process - badge information

* Update src/pages/developing/angular-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/react-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/react-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/vue-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/vue-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/react-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/developing/vue-tutorial/wrapping-up.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update wrapping-up.mdx

Content review -- heading clean up.

* Update wrapping-up.mdx

Content review - heading clean up

* Update wrapping-up.mdx

Content review - heading clean up.

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -40,20 +40,23 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ## Badge information
 
-### [IBM Carbon Design System Developer Essentials - React](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-react)
+For more information about the IBM Carbon Design System Developer Essentials - React badge, see the [Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-react) site. 
+
+### Badge process
 
 This badge demonstrates knowledge about Carbon's React components. To earn the
 badge:
 
-1. Complete steps 1 through 5 of the Carbon React tutorial
+1. Complete steps 1 through 5 of the Carbon React tutorial:
    - Step 1. [Installing Carbon](/developing/react-tutorial/step-1)
    - Step 2. [Building pages](/developing/react-tutorial/step-2)
    - Step 3. [Using APIs](/developing/react-tutorial/step-3)
    - Step 4. [Creating components](/developing/react-tutorial/step-4)
    - Step 5. [Deploying to IBM Cloud](/developing/react-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
-   [carbon-tutorial repository](https://github.com/carbon-design-system/carbon-tutorial)
-3. Complete the [badge application](https://badges.carbondesignsystem.com)
+   [carbon-tutorial repository](https://github.com/carbon-design-system/carbon-tutorial).
+3. Apply for the IBM Digital Badge by completing the
+   [form and survey](https://badges.carbondesignsystem.com/).
 
 <InlineNotification>
 
@@ -86,8 +89,6 @@ practices. The IBM Privacy Statement can be viewed here:
 [https://www.ibm.com/privacy/us/en/](https://www.ibm.com/privacy/us/en/). IBM
 employees can view the IBM Internal Privacy Statement here:
 [https://w3.ibm.com/w3publisher/w3-privacy-notice](https://w3.ibm.com/w3publisher/w3-privacy-notice).
-
-### Application form
 
 To apply for the IBM Digital Badge, please complete the
 [form and survey](https://badges.carbondesignsystem.com).
