docs: component and pattern intro updates

--- a/src/pages/community/patterns/index.mdx
+++ b/src/pages/community/patterns/index.mdx
@@ -5,6 +5,14 @@ description:
   community.
 ---
 
+<PageDescription>
+
+Patterns are best practice solutions for how a user achieves a goal. They show
+reusable combinations of components and templates that address common user
+objectives with sequences and flows.
+
+</PageDescription>
+
 ## Community patterns
 
 These patterns are developed and maintained by members of the Carbon community.
@@ -19,7 +27,7 @@ _Some of this content is accessible to IBMers only._
 
 <br />
 
-| Community patterns                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+| Pattern                                                                                                                                | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 | -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | [Chatbots](/community/patterns/chatbot/overview)                                                                                       | How to design chatbots for users using natural language.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
 | [Content: in-app learning](https://pages.github.ibm.com/watson-health/docs/guidelines/content-design/using-the-adoption-patterns.html) | _Accessible to IBMers only._ A set of patterns to help users understand key features. Includes guidance for creating the following: [welcome screens](https://pages.github.ibm.com/Watson-Health/components/welcome-screen/overview.html), [getting started](https://pages.github.ibm.com/Watson-Health/components/getting-started/overview.html), [in-context help and guidance](https://pages.github.ibm.com/Watson-Health/components/in-context-help/overview.html), [global help and guidance](https://pages.github.ibm.com/Watson-Health/components/global-help/overview.html), and [what's new/updates](https://pages.github.ibm.com/Watson-Health/components/updates/overview.html). |
