--- a/src/pages/components/overview/index.mdx
+++ b/src/pages/components/overview/index.mdx
@@ -7,12 +7,25 @@ description:
 
 import ComponentOverview from 'components/ComponentOverview';
 
-## Building blocks
+<PageDescription>
 
-Components are one of the key building blocks of the design system. Each
-component has been designed and coded to solve a specific UI problem, such as
-presenting a list of options, enabling submission of a form, providing feedback
-to the user, and so on. All of the components in Carbon have been designed to
-work harmoniously together, as parts of a greater whole.
+Components are one of the key building blocks of the design system. Their
+systematic reuse helps to create visual and functional consistency across
+products.
+
+</PageDescription>
+
+## Components
+
+Each component has been designed and coded to solve a specific UI problem, such
+as presenting a list of options, enabling submission of a form, providing
+feedback to the user, and so on. All of the components in Carbon have been
+designed to work harmoniously together, as parts of a greater whole.
 
 <ComponentOverview />
+
+## Community components
+
+Additional components, maintained by members of the Carbon community, are
+available in
+[Community assets](https://www.carbondesignsystem.com/community/component-index).
