--- a/src/pages/patterns/overview.mdx
+++ b/src/pages/patterns/overview.mdx
@@ -1,20 +1,24 @@
 ---
-title: Patterns
+title: Overview
 description:
   Patterns are best practice solutions for how a user achieves a goal. They show
   reusable combinations of components and templates that address common user
   objectives with sequences and flows.
 ---
 
-## About patterns
+<PageDescription>
 
 Patterns are best practice solutions for how a user achieves a goal. They show
 reusable combinations of components and templates that address common user
 objectives with sequences and flows.
 
-<br />
+</PageDescription>
 
-| Production patterns                             |                                                                                                                                         |
+## Universal patterns
+
+The following patterns have been approved for universal use.
+
+| Pattern                                         | Description                                                                                                                             |
 | ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
 | [Common actions](/patterns/common-actions)      | Frequently used actions that appear multiple times across different components and workflows                                            |
 | [Dialogs](/patterns/dialog-pattern)             | Prompted when the system needs input from the user or to give the user urgent information concerning their current workflow             |
@@ -29,3 +33,9 @@ objectives with sequences and flows.
 | [Overflow content](/patterns/overflow-content)  | Text, such as a paragraph or a text string, that exceeds a desired space                                                                |
 | [Search](/patterns/search-pattern)              | An intuitive method of discovery, offering users a way to explore a website or application using keywords                               |
 | [Text toolbar](/patterns/text-toolbar-pattern)  | A set of buttons and menus that allows users to edit text.                                                                              |
+
+## Community patterns
+
+Additional patterns, maintained by members of the Carbon community, are
+available in
+[Community assets](https://www.carbondesignsystem.com/community/patterns).
