image updates from jeannie

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -97,19 +97,19 @@ transform a somewhat dry experience to something delightful, while building more
 confidence and trust in the interface itself.
 
 <Row>
-<Column colLg={4}>
+<Column colLg={6}>
 
 ![Order confirmation page prior to the redesign](images/checkout-before.png)
 
-<Caption>Order confirmation page prior to the redesign</Caption>
+<Caption>Before: order confirmation page prior to the redesign</Caption>
 
 </Column>
 
-<Column colLg={4}>
+<Column colLg={6}>
 
 ![Order confirmation page after the redesign](images/checkout-after.png)
 
-<Caption>Order confirmation page after the redesign</Caption>
+<Caption>After: order confirmation page after the redesign</Caption>
 
 </Column>
 </Row>
@@ -232,15 +232,23 @@ placing pre-built components and can therefore focus on more important issues
 instead of taking the time to build out each element and component.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={6}>
 
-![Order confirmation designs and in production after one sprint](images/delivery.png)
+![Order confirmation page design](images/delivery.png)
 
 <Caption>
-  From left to right: the order confirmation screen handed off to developers,
-  the order confirmation screen in production at the end of one sprint, and the
-  order confirmation screen after in production at the end of the sprint plus
-  two extra working days.
+  Before: the order confirmation screen design that was handed off to developers{' '}
+</Caption>
+
+</Column>
+
+<Column colLg={6}>
+
+![Order confirmation page in production](images/in-prod.png)
+
+<Caption>
+  After: the order confirmation screen after in production at the end of the
+  sprint (plus two extra working days)
 </Caption>
 
 </Column>
@@ -263,7 +271,31 @@ same way, providing familiarity and a feeling of dependability.
 <Row>
 <Column colLg={8}>
 
-![Continuity in experiences using Carbon for IBM.com.](images/continuity.png)
+![Product configuration page](images/continuity-1.png)
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
+![Checkout page](images/continuity-2.png)
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
+![Order confirmation page](images/continuity-3.png)
+
+</Column>
+</Row>
+
+<Row>
+<Column colLg={8}>
+
+![Profile page](images/continuity-4.png)
 
 <Caption>
   Continuity in experiences using Carbon for IBM.com. From top to bottom:
